--- a/.air.toml
+++ b/.air.toml
@@ -7,13 +7,13 @@ tmp_dir = "tmp"
   bin = "./tmp/main"
   cmd = "go build -o ./tmp/main cmd/main.go"
   delay = 0
-  exclude_dir = ["node_modules", "assets", "tmp", "vendor", "testdata"]
+  exclude_dir = ["tmp", "vendor", "testdata"]
   exclude_file = []
   exclude_regex = ["_test.go"]
   exclude_unchanged = false
   follow_symlink = false
   full_bin = ""
-  include_dir = ["cmd", "pkg"]
+  include_dir = ["cmd", "pkg", "internal"]
   include_ext = ["go"]
   include_file = []
   kill_delay = "0s"
